Replaced taxonomy charts. Started taxonomy analysis. Charts created with Gnumerics.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -336,3 +336,9 @@ title={Talk:Q35120},
 howpublished={\url{https://www.wikidata.org/wiki/Talk:Q35120}},
 note={Accessed: 2017-01-29}
 }
+% wikidata project chat about subclass tree
+@misc{WikidataSubclassTree,
+title={Wikidata project chat: Top of the subclass tree},
+howpublished={\url{https://www.wikidata.org/w/index.php?title=Wikidata:Project_chat&oldid=91040961#Top_of_the_subclass_tree}},
+note={Accessed: 2017-01-30}
+}
