--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -49,7 +49,7 @@ General concepts. Classification of considered problem in the task of ontology l
 \fullcite{Wong2012}\\
 \fullcite{dAmato16}\\
 \fullcite{Petrucci16}\\
-\fullcite{Fu2014}
+\fullcite{Fu2014}\\
 
 \section{Neural networks}
 Notion of neural networks will be introduced.
@@ -64,7 +64,9 @@ Notion of neural networks will be introduced.
 \subsection{Skip-gram with negative sampling}
 \fullcite{Mikolov2013}\\
 \fullcite{Levy2015}\\
-\fullcite{Goldberg14}
+\fullcite{Goldberg14}\\
+graph representations are not really relevant as there is only one big component
+and the input classes are not part of that component.
 
 \subsection{Comparison}
 
